--- a/app/src/main/res/drawable/relativebottom.xml
+++ b/app/src/main/res/drawable/relativebottom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/teal_700"></solid>
-    <corners android:bottomRightRadius="20dp"
-        android:bottomLeftRadius="20dp"
-        ></corners>
+    <solid android:color="@color/teal_700" />
+    <corners
+        android:bottomRightRadius="20dp"
+        android:bottomLeftRadius="20dp" />
 
 </shape>
